[gd_scene load_steps=7 format=3 uid="uid://s3cqe7hw7f1n"]

[ext_resource type="Script" path="res://collections/collections_grid/collections_grid.gd" id="1_xvdnw"]
[ext_resource type="Texture2D" uid="uid://cas13pywr4ltf" path="res://gfx/default_background.png" id="2_62jvj"]
[ext_resource type="Script" path="res://collections/collections_grid/popup_menu.gd" id="2_d2s68"]
[ext_resource type="PackedScene" uid="uid://caw3e0r70wu5s" path="res://collections/delete_collection/delete_collection.tscn" id="4_csmqc"]
[ext_resource type="PackedScene" uid="uid://c2cc6h6qxov7y" path="res://collections/new_collection_dialog/new_collection.tscn" id="5_0vbyp"]
[ext_resource type="Script" path="res://collections/collections_grid/new_collection_dialog.gd" id="5_ejsva"]

[node name="CollectionsGrid" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xvdnw")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_62jvj")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="ScrollContainer"]
layout_mode = 2

[node name="PopupMenu" type="PopupMenu" parent="."]
size = Vector2i(112, 93)
item_count = 4
item_0/text = "Edit"
item_1/text = "Favorite"
item_1/checkable = 1
item_1/id = 1
item_2/id = 2
item_2/separator = true
item_3/text = "Delete"
item_3/id = 3
script = ExtResource("2_d2s68")

[node name="DeleteCollection" parent="." instance=ExtResource("4_csmqc")]
visible = false

[node name="NewCollectionDialog" type="Window" parent="."]
title = "New Collection"
size = Vector2i(320, 100)
visible = false
unresizable = true
script = ExtResource("5_ejsva")

[node name="NewCollection" parent="NewCollectionDialog" instance=ExtResource("5_0vbyp")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 320.0
offset_bottom = 100.0
grow_horizontal = 1
grow_vertical = 1

[connection signal="delete" from="PopupMenu" to="." method="_on_popup_menu_delete"]
[connection signal="edit" from="PopupMenu" to="." method="_on_popup_menu_edit"]
[connection signal="id_pressed" from="PopupMenu" to="PopupMenu" method="_on_id_pressed"]
[connection signal="deleted" from="DeleteCollection" to="." method="_on_delete_collection_deleted"]
[connection signal="about_to_popup" from="NewCollectionDialog" to="NewCollectionDialog" method="_on_about_to_popup"]
[connection signal="close_requested" from="NewCollectionDialog" to="NewCollectionDialog" method="_on_close_requested"]
[connection signal="create_new" from="NewCollectionDialog/NewCollection" to="." method="_on_new_collection_create_new"]
[connection signal="create_new" from="NewCollectionDialog/NewCollection" to="NewCollectionDialog" method="_on_new_collection_create_new"]
