[gd_scene load_steps=5 format=3 uid="uid://s3cqe7hw7f1n"]

[ext_resource type="Script" path="res://ui/collections/collections_grid/collections_grid.gd" id="1_xvdnw"]
[ext_resource type="Texture2D" uid="uid://cas13pywr4ltf" path="res://gfx/default_background.png" id="2_62jvj"]
[ext_resource type="Script" path="res://ui/collections/collections_grid/popup_menu.gd" id="2_d2s68"]
[ext_resource type="PackedScene" uid="uid://caw3e0r70wu5s" path="res://ui/collections/delete_collection/delete_collection.tscn" id="4_csmqc"]

[node name="CollectionsGrid" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xvdnw")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_62jvj")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
layout_mode = 2
horizontal_scroll_mode = 3

[node name="GridContainer" type="GridContainer" parent="MarginContainer/ScrollContainer"]
layout_mode = 2

[node name="PopupMenu" type="PopupMenu" parent="."]
size = Vector2i(112, 93)
item_count = 4
item_0/text = "Favorite"
item_0/checkable = 1
item_0/id = 1
item_1/text = "Edit"
item_1/id = 2
item_2/id = 2
item_2/separator = true
item_3/text = "Delete"
item_3/id = 3
script = ExtResource("2_d2s68")

[node name="DeleteCollection" parent="." instance=ExtResource("4_csmqc")]
visible = false

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="delete" from="PopupMenu" to="." method="_on_popup_menu_delete"]
[connection signal="edit" from="PopupMenu" to="." method="_on_popup_menu_edit"]
[connection signal="id_pressed" from="PopupMenu" to="PopupMenu" method="_on_id_pressed"]
